<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FirstExerciseFragment">

    <EditText
        android:id="@+id/edt1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/home_fragment_edt1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/home_fragment_edt2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt1" />

    <EditText
        android:id="@+id/edt3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/home_fragment_edt3"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt2" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt3"
        app:layout_constraintVertical_bias="0.07999998">

        <Button
            android:id="@+id/buttonOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_fragment_button1" />

        <Button
            android:id="@+id/buttonTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_fragment_button2" />

        <Button
            android:id="@+id/buttonThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_fragment_button3" />

        <Button
            android:id="@+id/buttonFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_fragment_button4" />

        <Button
            android:id="@+id/buttonFive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_fragment_button5" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>