<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/buttonOpenExerciseOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_fragment_button_open_one" />

        <Button
            android:id="@+id/buttonOpenExerciseTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_fragment_button_open_two" />

        <Button
            android:id="@+id/buttonOpenExerciseThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_fragment_button_open_three" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>